2020-11-30  b606  <7627533+b606@users.noreply.github.com>

	* Patcher.cs:
	* StatsLogger.cs:
	* InspectionPatch.cs:
	* RulesForDefPatch.cs:
	* RulesForPawnPatch.cs:
	* LanguageWorker_Mod.cs:
	* LoadedLanguagePatch.cs:
	* LanguageWorker_French_Debug.cs:
	* RulesForBodyPartRecordPatch.cs: Started refactoring code and
	classes. Added support for multiple languages (in the same
	family).

2020-11-29  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Fix: Add NullOrEmpty tests for
	string. Fix bug with UI editbox with empty string.

2020-11-25  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Do not overwrite kind.label
	anymore for epicen animals: might cause bug when more than one
	languageworker mods are activated.

2020-11-23  b606  <7627533+b606@users.noreply.github.com>

	* packages.config:
	* RimWorld_LanguageWorker_French.csproj: Update to libHarmony
	2.0.4 and NET framework 4.7.2

2020-10-30  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Fix incorrect gender texts in
	GameConditions, ex. in psychic drones, where there is no way
	to use {XXX_gender ? : }.

2020-10-30  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Changed the char code for
	permanently suppress elision to '\200C' (zero-width non joiner
	space) in both WithDefiniteArticle() and
	WithIndefiniteArticle().

2020-10-29  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Fix: ReGex elisions for "(à|À)
	<tag>le(s?) " separated with a text color tag should work
	properly.

	* packages.config:
	* RimWorld_LanguageWorker_French.csproj: Lib.Harmony updated
	to version 2.0.3.

2020-09-26  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Update to version 1.2.
	First names starting with 'H' or short names starting with
	a vowel do not require elision. Ex. "le chapeau de Anne" or
	"le chapeau de Hector" instead of "le chapeau d'Anne" or